// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend doesn't render series when there is no series name 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "height": 10,
            "marginRight": 5,
            "width": 10,
          },
        ]
      }
    />
    <Text>
      Line 2
    </Text>
  </View>
</View>
`;

exports[`Legend doesn't render when there are no series 1`] = `null`;

exports[`Legend renders 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "margin": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#0595DB",
          },
          Object {
            "height": 10,
            "marginRight": 5,
            "width": 10,
          },
        ]
      }
    />
    <Text>
      Line 1
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "green",
          },
          Object {
            "height": 10,
            "marginRight": 5,
            "width": 10,
          },
        ]
      }
    />
    <Text>
      Line 2
    </Text>
  </View>
</View>
`;
